--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
